--- a/AndEngineUbicompTest/res/layout/main.xml
+++ b/AndEngineUbicompTest/res/layout/main.xml
@@ -9,4 +9,8 @@
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     />
+<TextView android:id="@+id/serviceStatus"
+	android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/serviceStatus" />    
 </LinearLayout>
